--- a/docs/intro.adoc
+++ b/docs/intro.adoc
@@ -37,15 +37,15 @@ text to make for easier copying.
 
 You will be using Red Hat CodeReady Workspaces, an online IDE based on https://www.eclipse.org/che/[Eclipe Che,window=_blank]. To get started, {{ CHE_URL }}[access the Che instance,window=_blank] and log in using the username and password you've been assigned (e.g. `userNN/passNN`):
 
-image::che-login.png[800]
+image::che-login.png[login,600]
 
 Once you log in, you'll be placed on your personal dashboard allowing you to spawn new workspaces to work on code in a traditional IDE environment. Click on the **Add Workspace** tab on the left, and select the _Quarkus Java_ stack, and click **Create & Open** to start the workspace:
 
-image::che-createworkspace.png[]
+image::che-createworkspace.png[create,800]
 
 After a minute or two, you'll be placed in the workspace:
 
-image::che-workspace.png[]
+image::che-workspace.png[workspace,800]
 
 Users of Eclipse, IntelliJ IDEA or Visual Studio Code will see a familiar layout: a project/file browser on the left, a code editor on the right, and a terminal at the bottom. You'll use all of these during the course of this workshop, so keep this browser tab open throughout. If things get weird, you can simply reload the browser tab to refresh the view.
 
